# massbit-verification

./: Cargo.toml  README.md
.github/workflows/: check.yml
benchmarking/: frame-weight-template.hbs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  lib.rs  primitives.rs  rpc.rs  service.rs
node/src/local/: chain_spec.rs  service.rs
pallets/block-reward/: Cargo.toml
pallets/block-reward/src/: lib.rs
pallets/dapi/: Cargo.toml
pallets/dapi-staking/: Cargo.toml
pallets/dapi-staking/src/: benchmarking.rs  lib.rs  mock.rs  testing_utils.rs  tests.rs  weights.rs
pallets/dapi-staking/src/pallet/: mod.rs
pallets/dapi/src/: benchmarking.rs  lib.rs  mock.rs  types.rs  weights.rs
pallets/fisherman/: Cargo.toml
pallets/fisherman/src/: lib.rs
pallets/oracle/: Cargo.toml
pallets/oracle/src/: lib.rs
runtime/: Cargo.toml
runtime/local/: Cargo.toml
runtime/local/src/: lib.rs
runtime/src/: lib.rs
